# stencil

./: .releaserc  .releaserc.yaml  Cargo.toml  README.md
.github/workflows/: audit.yml  check.yml  create_release.yml
src/: main.rs
